# user-directories-rs

./: Cargo.toml  LICENSE
examples/find_directories/: Cargo.toml
examples/find_directories/src/: main.rs
src/: lib.rs  linux.rs  macos.rs  win32.rs
